--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-matplotlib==3.1.1
-numpy==1.17.4
+argparse
+table
+tables==3.7.0
+matplotlib==3.5.2
+numpy==1.22.4
 pandas==0.25.3
 scipy==1.4.1
-torch==1.8.2+cu111 -f https://download.pytorch.org/whl/lts/1.8/torch_lts.html
 scikit_learn==0.23.1
-tqdm
-table
-tables
-argparse
-seaborn
+tqdm==4.64.0
+seaborn==0.11.2
+pandas==0.25.3
