--- a/models/DCRNN-pytroch-master/requirements.txt
+++ b/models/DCRNN-pytroch-master/requirements.txt
@@ -1,6 +1,7 @@
-scipy=1.2.1
-numpy=1.16.2
-pandas=0.24.2
-PyTorch>=1.1.0
 tqdm
-pytable
+table
+tables
+scipy==1.2.1
+numpy==1.16.2
+pandas==0.24.2
+PyTorch>=1.1.0
